improved disabled state style

--- a/WalletWasabi.Fluent/Views/AddWallet/Create/ConfirmRecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/ConfirmRecoveryWordsView.axaml
@@ -37,14 +37,20 @@
         </ItemsControl.ItemsPanel>
         <ItemsControl.ItemTemplate>
           <DataTemplate x:DataType="create:RecoveryWordViewModel">
-            <ToggleButton IsChecked="{Binding IsSelected}"
-                          IsEnabled="{Binding IsEnabled}">
+            <ToggleButton IsChecked="{Binding IsSelected}">
+              <ToggleButton.IsEnabled>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                  <Binding Path="IsEnabled" />
+                  <Binding Path="IsConfirmed" Converter="{x:Static BoolConverters.Not}" />
+                </MultiBinding>
+              </ToggleButton.IsEnabled>
               <ToggleButton.Styles>
                 <Style Selector="ToggleButton[IsChecked=True] /template/ c|TagControl">
                   <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}" />
                   <Setter Property="BorderBrush" Value="{DynamicResource SystemAccentColor}" />
                 </Style>
                 <Style Selector="ToggleButton[IsEnabled=False] /template/ c|TagControl">
+                  <Setter Property="Opacity" Value="0.6" />
                   <Setter Property="Foreground" Value="{DynamicResource ButtonForegroundDisabled}" />
                   <Setter Property="BorderBrush" Value="{DynamicResource ButtonForegroundDisabled}" />
                 </Style>
