--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -24,13 +24,10 @@
 
       <!-- Amount -->
       <c:PreviewItem Icon="{StaticResource btc_logo}"
-                     Label="Amount"
+                     Label="{Binding AmountText}"
                      TextValue="{Binding Amount}">
         <c:PrivacyContentControl>
-          <StackPanel Orientation="Horizontal">
-            <TextBlock Text="-" IsVisible="{Binding IsOutgoingAmount}" Classes="monoSpaced" />
-            <TextBlock Text="{Binding Amount, StringFormat={}{0} BTC, Mode=OneWay}" Classes="monoSpaced" />
-          </StackPanel>
+          <TextBlock Text="{Binding Amount, StringFormat={}{0} BTC, Mode=OneWay}" Classes="monoSpaced" />
         </c:PrivacyContentControl>
       </c:PreviewItem>
 
