--- a/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
@@ -105,7 +105,8 @@
                         VerticalAlignment="Center"
                         ContentTemplate="{StaticResource Title}" />
 
-        <ContentControl Grid.Column="3" ContentTemplate="{StaticResource SearchBar}" />
+        <!--<ContentControl Grid.Column="3" ContentTemplate="{StaticResource SearchBar}" />-->
+        <ContentControl Grid.Column="3" ContentTemplate="{StaticResource ChatAssistant}" />
 
         <shell:NetworkBadge VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 8 0" Grid.Column="4" />
 
@@ -133,7 +134,8 @@
             <ContentControl ContentTemplate="{StaticResource Title}" Margin="16 4 0 0" />
           </Panel>
         </DockPanel>
-        <ContentControl Grid.Column="2" ContentTemplate="{StaticResource SearchBar}" />
+        <!--<ContentControl Grid.Column="2" ContentTemplate="{StaticResource SearchBar}" />-->
+        <ContentControl Grid.Column="2" ContentTemplate="{StaticResource ChatAssistant}" />
         <shell:NetworkBadge Margin="10,0,10,0" Grid.Column="3" />
       </Grid>
     </DataTemplate>
