--- a/WalletWasabi.Fluent/Views/ChatGPT/ChatAssistant.axaml
+++ b/WalletWasabi.Fluent/Views/ChatGPT/ChatAssistant.axaml
@@ -128,7 +128,7 @@
     </Style>
   </UserControl.Styles>
 
-  <TextBox x:Name="SearchBox" Watermark="Search settings / advanced features" MaxLength="50" HorizontalAlignment="Stretch"
+  <TextBox x:Name="SearchBox" Watermark="Ask me anything" MaxLength="50" HorizontalAlignment="Stretch"
            Text="{Binding InputText, Mode=TwoWay}" VerticalAlignment="Center">
 
     <i:Interaction.Behaviors>
