--- a/WalletWasabi.Fluent/Views/ChatGPT/ChatAssistant.axaml
+++ b/WalletWasabi.Fluent/Views/ChatGPT/ChatAssistant.axaml
@@ -12,6 +12,7 @@
              x:Class="WalletWasabi.Fluent.Views.ChatGPT.ChatAssistant">
   <UserControl.Resources>
     <Thickness x:Key="TextControlBorderThemeThicknessFocused">1</Thickness>
+    <StreamGeometry x:Key="chat_help_regular">M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10a9.96 9.96 0 0 1-4.587-1.112l-3.826 1.067a1.25 1.25 0 0 1-1.54-1.54l1.068-3.823A9.96 9.96 0 0 1 2 12C2 6.477 6.477 2 12 2Zm0 1.5A8.5 8.5 0 0 0 3.5 12c0 1.47.373 2.883 1.073 4.137l.15.27-1.112 3.984 3.987-1.112.27.15A8.5 8.5 0 1 0 12 3.5Zm0 12a1 1 0 1 1 0 2 1 1 0 0 1 0-2Zm0-8.75a2.75 2.75 0 0 1 2.75 2.75c0 1.01-.297 1.574-1.051 2.359l-.169.171c-.622.622-.78.886-.78 1.47a.75.75 0 0 1-1.5 0c0-1.01.297-1.574 1.051-2.359l.169-.171c.622-.622.78-.886.78-1.47a1.25 1.25 0 0 0-2.493-.128l-.007.128a.75.75 0 0 1-1.5 0A2.75 2.75 0 0 1 12 6.75Z</StreamGeometry>
   </UserControl.Resources>
 
   <Design.DataContext>
@@ -145,7 +146,7 @@
       <PathIcon Name="LeftIcon" Data="{DynamicResource action_center_regular}" />
     </TextBox.InnerLeftContent>
     <TextBox.InnerRightContent>
-      <PathIcon Name="RightIcon" Data="{DynamicResource search_regular}" />
+      <PathIcon Name="RightIcon" Data="{DynamicResource chat_help_regular}" />
     </TextBox.InnerRightContent>
 
     <FlyoutBase.AttachedFlyout>
