--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -98,7 +98,7 @@
                   Margin="0 0 0 0"
                   IsHitTestVisible="{Binding !IsTransactionHistoryEmpty}">
       <i:Interaction.Behaviors>
-        <behaviors:ScrollToSelectedItemBehavior IsEnabled="{Binding BringIntoView}" />
+        <behaviors:ScrollToSelectedItemBehavior />
       </i:Interaction.Behaviors>
       <TreeDataGrid.ElementFactory>
         <treeDataGrid:PrivacyElementFactory />
