Fix main window focus

--- a/WalletWasabi.Fluent/Views/MainWindow.axaml
+++ b/WalletWasabi.Fluent/Views/MainWindow.axaml
@@ -20,8 +20,9 @@
         ExtendClientAreaChromeHints="Default, PreferSystemChrome, OSXThickTitleBar"
         Title="Wasabi Wallet"
         WindowState="{Binding WindowState, Mode=TwoWay}"
-        Focusable="{Binding SearchBar.IsSearchListVisible}"
+        Focusable="{Binding ChatAssistant.IsChatListVisible}"
         Icon="/Assets/WasabiLogo.ico">
+  <!--  Focusable="{Binding SearchBar.IsSearchListVisible}" -->
   <Window.Styles>
     <Style Selector="TitleBar">
       <Setter Property="Foreground" Value="{DynamicResource AcrylicTrimForeground}" />
