--- a/WalletWasabi.Fluent/Styles/PathIcon.axaml
+++ b/WalletWasabi.Fluent/Styles/PathIcon.axaml
@@ -11,6 +11,11 @@
     </Setter>
   </Style>
 
+  <Style Selector="PathIcon.size16">
+    <Setter Property="Width" Value="16" />
+    <Setter Property="Height" Value="16" />
+  </Style>
+
   <Style Selector="PathIcon.size24">
     <Setter Property="Width" Value="24" />
     <Setter Property="Height" Value="24" />
